Add CIFS/SMB shared filesystem mount support
Conditionally mount CIFS shares when cifs_enabled is true:
- Install cifs-utils package via cloud-init
- Write SMB credentials to /root/.smbcredentials-sharedfs (0600)
- Add /sharedfs fstab entry with nofail,_netdev flags
- Add cifs_enabled, cifs_server, cifs_username, cifs_password variables
- README documents CIFS mount behavior and configuration

--- a/cloud-init.cfg
+++ b/cloud-init.cfg
@@ -19,10 +19,28 @@ packages:
   - git
   - curl
   - zsh
+%{ if cifs_enabled ~}
+  - cifs-utils
+%{ endif ~}
+
+write_files:
+%{ if cifs_enabled ~}
+  - path: /root/.smbcredentials-sharedfs
+    owner: root:root
+    permissions: '0600'
+    content: |
+      username=${cifs_username}
+      password=${cifs_password}
+%{ endif ~}
 
 runcmd:
   - systemctl enable serial-getty@ttyS0.service
   - systemctl start serial-getty@ttyS0.service || true
+%{ if cifs_enabled ~}
+  - mkdir -p /sharedfs
+  - echo '//${cifs_server}/sharedfs /sharedfs cifs credentials=/root/.smbcredentials-sharedfs,iocharset=utf8,uid=1000,gid=1000,nofail,_netdev 0 0' >> /etc/fstab
+  - mount -a || true
+%{ endif ~}
   - |
     # Clone dotfiles and run setup for tonynv
     su - tonynv -c '
