Add secrets management with secret.auto.tfvars
Introduce gitignored secret.auto.tfvars pattern for sensitive values:
- Add secret.auto.tfvars.example as a checked-in template
- Add vm_password variable (sensitive) for optional password auth
- Cloud-init conditionally enables chpasswd and ssh_pwauth
- README documents secrets workflow, setup, and password behavior

--- a/cloud-init.cfg
+++ b/cloud-init.cfg
@@ -7,11 +7,22 @@ users:
   - name: tonynv
     sudo: ALL=(ALL) NOPASSWD:ALL
     shell: /bin/bash
-    lock_passwd: true
+    lock_passwd: ${ vm_password != "" ? "false" : "true" }
     ssh_authorized_keys:
       - ${ssh_public_key}
+%{ if vm_password != "" ~}
+
+chpasswd:
+  expire: false
+  list: |
+    root:${vm_password}
+    tonynv:${vm_password}
+
+ssh_pwauth: true
+%{ else ~}
 
 ssh_pwauth: false
+%{ endif ~}
 
 package_update: true
 
