Add customizable login banner
Write /etc/issue and /etc/motd via cloud-init:
- Custom text when login_banner is set
- Default banner linking to project repo when empty
- Add login_banner variable and wire through templatefile
- README documents banner behavior

--- a/cloud-init.cfg
+++ b/cloud-init.cfg
@@ -35,7 +35,26 @@ packages:
 %{ endif ~}
 
 write_files:
+  - path: /etc/issue
+    content: |
+%{ if login_banner != "" ~}
+      ${login_banner}
+%{ else ~}
+      Built with https://github.com/tonynv/terraform-libvirt-vm
+%{ endif ~}
+      \S \r (\l)
+
+  - path: /etc/motd
+    content: |
+      =========================================
+%{ if login_banner != "" ~}
+       ${login_banner}
+%{ else ~}
+       Built with https://github.com/tonynv/terraform-libvirt-vm
+%{ endif ~}
+      =========================================
 %{ if cifs_enabled ~}
+
   - path: /root/.smbcredentials-sharedfs
     owner: root:root
     permissions: '0600'
