Add configurable dotfiles repository
Make the dotfiles git repo a variable instead of hardcoded:
- Add dotfiles_repo variable (default: tonynv/dotfiles.git)
- Cloud-init clones from the variable instead of a fixed URL
- README documents dotfiles provisioning and custom repo usage

--- a/cloud-init.cfg
+++ b/cloud-init.cfg
@@ -75,7 +75,7 @@ runcmd:
     # Clone dotfiles and run setup for tonynv
     su - tonynv -c '
       cd ~
-      git clone https://github.com/tonynv/dotfiles.git
+      git clone ${dotfiles_repo}
       cd dotfiles
       bash ./tonynv_setup.sh
     '
